# CarbonAsService

./: .gitignore  pyproject.toml  run.py
backend/: .gitignore  carbon.db  carbon_intensity.py  crud.py  database.py  ecofloc_database.py  ecofloc_runner.py  electricitymaps.py  main.py  models.py  pyproject.toml  scheduler.py  system_info.py
frontend/: pyproject.toml  streamlit_app.py
