[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "boaviztapi>=0.2.2",
    "dbgpu[all]>=2025.6",
    "fastapi>=0.116.1",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.41",
    "uvicorn[standard]>=0.35.0",
]
