[project]
name = "frontend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dbgpu[all]>=2025.6",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "plotly-express>=0.4.1",
    "requests>=2.32.4",
    "streamlit>=1.47.0",
]
